--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,59 @@
 ﻿EAGLE Library ChangeLog
 =======================
 
+2012-12-17
+  * rcl.lbr: Eagle 6.3.2
+    corrected package outlines:
+    RTRIM3296P.PAC
+    RTRIM3296W.PAC
+    RTRIM3296X.PAC
+    RTRIM3296Y.PAC
+
+2012-11-28
+  * relay.lbr: Eagle 6.3.2
+    package contour corrected: DIL06.PAC
+
+2012-11-28
+  * zetex.lbr: Eagle 6.3.2
+    changed symbols and corrected connection: *.DEV
+
+2012-11-20
+  * jumper.lbr: Eagle 6.3.1
+    corrected pad coordinates: JP2Q.PAC
+
+2012-11-12
+  * con-coax.lbr: Eagle 6.3.1
+    changed all devices with new connect option, multipin any/all: *.DEV
+
+2012-11-08
+  * e-schuetze-relais.lbr: Eagle 6.3.1
+    corrected pad names:
+    RELAIS_2-POL-UM.DEV
+    RELAIS_4-POL-UM.DEV
+
+2012-11-05
+  * logo.lbr: Eagle 6.3.1
+    added:
+    CE-4MM.PAC
+    C_TICK.PAC
+    FCC_6.1X15MM.PAC
+    FCC_10X4.175MM.PAC
+    FCC_20X8.35MM.PAC
+
+2012-11-05
+  * inductors.lbr: Eagle 6.3.1
+    renamed: BML15H.DEV to BLM15H.DEV
+
+2012-10-30
+  * eagle-ltspice.lbr: Eagle 6.3.1
+    added: for beta version ltspice.ulp
+    C.DEV
+    DIODE_E-.DEV
+    L.DEV
+    LED_E.DEV
+    R.DEV
+    SCHOTTKY-DIODE.DEV
+
 2012-10-01
   * texas.lbr: Eagle 6.2.3
     added:
@@ -47,7 +100,7 @@
     ACS758*.DEV
     ACS750*CA-050.DEV
 
-2012-07-06
+2012-07-09
   * 19inch.lbr: Eagle 6.2.2
     corrected package variant : VG96P -> VG64P
 
